# Projet_Final_Domotique

./: .gitignore  main.cpp
backend/: CMakeLists.txt  README.md  main.c
backend/json-c-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  libjson-c.so.5.1.0
backend/json-c-build/Testing/Temporary/: CTestCostData.txt
backend/json-c-build/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake  json_parse
backend/json-c-build/doc/: CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake
backend/json-c-build/doc/html/: README_8md.html  annotated.html  arraylist_8h.html  classes.html  deprecated.html  dir_6ffef9acc451ba3d7c5cac3bbbb5bec6.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_j.html  globals_l.html  globals_p.html  globals_s.html  globals_type.html  globals_vars.html  index.html  (+28 more)
backend/json-c-build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test1  test1Formatted  test2  test2Formatted  test4  testReplaceExisting  test_cast  test_charcase  test_compare  test_deep_copy  test_double_serializer  test_float  test_int_add  test_json_pointer  test_locale  test_null  test_object_iterator  test_parse  test_parse_int64  test_printbuf  test_set_serializer  test_set_value  test_strerror  test_util_file  test_visit
backend/src/: control.c  control.h  define.h  interface.c  interface.h  logging.c  logging.h  main.c  sensor.c  sensor.h  test.c
(+39 files in other folders)
